<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alistairbint.fuelcostcalculator.MainActivity">

    <TextView
        android:text="@string/enter_mpg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:id="@+id/textView2"
        android:textAppearance="@android:style/TextAppearance.Holo.Large" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editMiles"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignStart="@+id/editMpg"
        android:textAppearance="@android:style/TextAppearance.Holo.Large" />

    <EditText
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editCostPerLitre"
        android:layout_width="100dp"
        android:layout_marginStart="17dp"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toEndOf="@+id/textView3"
        android:textAppearance="@android:style/TextAppearance.Holo.Large" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editMpg"
        android:layout_above="@+id/textView3"
        android:layout_alignStart="@+id/editCostPerLitre"
        android:textAppearance="@android:style/TextAppearance.Holo.Large" />

    <TextView
        android:text="@string/enter_miles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:id="@+id/textView"
        android:textAppearance="@android:style/TextAppearance.Holo.Large"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/enter_cost_per_litre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:id="@+id/textView3"
        android:textAppearance="@android:style/TextAppearance.Holo.Large"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/caculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_marginBottom="35dp"
        android:onClick="onButtonClick"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="Total Cost £"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textAppearance="@android:style/TextAppearance.Holo.Large"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignParentStart="true"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="55dp"
        android:id="@+id/textView5"
        android:textAppearance="@android:style/TextAppearance.Holo.Large"
        android:layout_marginEnd="11dp"
        android:layout_above="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:layout_toEndOf="@+id/textView4"/>

</RelativeLayout>
